--- a/ProyectoTaller2/src/FrontEnd/TeacherView.form
+++ b/ProyectoTaller2/src/FrontEnd/TeacherView.form
@@ -63,9 +63,9 @@
                   <Component id="cmbSubjects" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnStudentList" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="214" max="-2" attributes="0"/>
-              <EmptySpace pref="189" max="32767" attributes="0"/>
+              <EmptySpace pref="224" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -127,7 +127,7 @@
               <Table columnCount="3" rowCount="0">
                 <Column editable="false" title="ID Estudiante" type="java.lang.Object"/>
                 <Column editable="false" title="Nombre" type="java.lang.Object"/>
-                <Column editable="false" title="Title 3" type="java.lang.Object"/>
+                <Column editable="false" title="Apellido" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
